crates/cli/tests/snapshots/cli_run__cli_run__test_benchmarks__astar.snap
---
source: crates/cli/tests/cli_tests.rs
expression: "test_benchmark(\"testAStar.roc\", vec![], UseValgrind::No)"
---
True
