crates/cli/tests/snapshots/cli_run__cli_run__test_benchmarks__base64.snap
---
source: crates/cli/tests/cli_tests.rs
expression: "test_benchmark(\"testBase64.roc\", vec![], UseValgrind::Yes)"
---
encoded: SGVsbG8gV29ybGQ=
decoded: Hello World
