crates/cli/tests/snapshots/cli_run__cli_run__test_benchmarks__cfold.snap
---
source: crates/cli/tests/cli_tests.rs
expression: "test_benchmark(\"cFold.roc\", vec![\"3\"], UseValgrind::Yes)"
---
Please enter an integer
11 & 11
