crates/cli/tests/snapshots/cli_run__cli_run__test_benchmarks__closure.snap
---
source: crates/cli/tests/cli_tests.rs
expression: "test_benchmark(\"closure.roc\", vec![], UseValgrind::No)"
---

