crates/cli/tests/snapshots/cli_run__cli_run__test_benchmarks__deriv.snap
---
source: crates/cli/tests/cli_run.rs
expression: "test_benchmark(\"deriv.roc\", vec![\"2\"], UseValgrind::Yes)"
---
Please enter an integer
1 count: 6
2 count: 22
