crates/cli/tests/snapshots/cli_run__cli_run__test_benchmarks__issue2279.snap
---
source: crates/cli/tests/cli_tests.rs
expression: "test_benchmark(\"issue2279.roc\", vec![], UseValgrind::Yes)"
---
Hello, world!
