crates/cli/tests/snapshots/cli_run__cli_run__test_benchmarks__nqueens.snap
---
source: crates/cli/tests/cli_run.rs
expression: "test_benchmark(\"nQueens.roc\", vec![\"6\"], UseValgrind::Yes)"
---
Please enter an integer
4
