crates/cli/tests/snapshots/cli_run__cli_run__test_benchmarks__rbtree_ck.snap
---
source: crates/cli/tests/cli_tests.rs
expression: "test_benchmark(\"rBTreeCk.roc\", vec![\"100\"], UseValgrind::Yes)"
---
Please enter an integer
10
