crates/cli/tests/snapshots/cli_run__cli_run__test_benchmarks__rbtree_insert.snap
---
source: crates/cli/tests/cli_tests.rs
expression: "test_benchmark(\"rBTreeInsert.roc\", vec![], UseValgrind::Yes)"
---
Node Black 0 {} Empty Empty
